// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmoduleAdapter> renders 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <div class=\\"hig__global-nav__side-nav__section__group\\">
    <div class=\\"hig__global-nav__side-nav__section__group__module\\">
  <div class=\\"hig__global-nav__side-nav__section__group__module__row\\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__link\\" href=\\"#\\">
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__icon\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"assets\\"><title>assets-24</title><g fill=\\"#2e4258\\"><path d=\\"M7,18H3V3H13V6h1V3a1,1,0,0,0-1-1H3A1,1,0,0,0,2,3V18a1,1,0,0,0,1,1H7Z\\"></path><path d=\\"M21,8V21H9V8H21m0-1H9A1,1,0,0,0,8,8V21a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V8a1,1,0,0,0-1-1Z\\"></path><path d=\\"M19,16v3H11V16h8m1-1H10v5H20V15Z\\"></path><path d=\\"M10,9v5H20V9Zm9,4H16V12H14v1H11V10h8Z\\"></path><polygon points=\\"7 10 5 10 5 5 11 5 11 6 12 6 12 4 4 4 4 11 7 11 7 10\\"></polygon></g></svg></div></div>
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__title\\">title</div>
    </a>
    <!--MODULE-COLLAPSE-->
  </div>
  <div class=\\"hig__global-nav__side-nav__section__group__module__submodules \\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__submodule\\" href=\\"\\">
  
</a><!--SUBMODULE-->
  </div>
</div><!--MODULE-->
</div><!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<SubmoduleAdapter> renders with initial props 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <div class=\\"hig__global-nav__side-nav__section__group\\">
    <div class=\\"hig__global-nav__side-nav__section__group__module\\">
  <div class=\\"hig__global-nav__side-nav__section__group__module__row\\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__link\\" href=\\"#\\">
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__icon\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"assets\\"><title>assets-24</title><g fill=\\"#2e4258\\"><path d=\\"M7,18H3V3H13V6h1V3a1,1,0,0,0-1-1H3A1,1,0,0,0,2,3V18a1,1,0,0,0,1,1H7Z\\"></path><path d=\\"M21,8V21H9V8H21m0-1H9A1,1,0,0,0,8,8V21a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V8a1,1,0,0,0-1-1Z\\"></path><path d=\\"M19,16v3H11V16h8m1-1H10v5H20V15Z\\"></path><path d=\\"M10,9v5H20V9Zm9,4H16V12H14v1H11V10h8Z\\"></path><polygon points=\\"7 10 5 10 5 5 11 5 11 6 12 6 12 4 4 4 4 11 7 11 7 10\\"></polygon></g></svg></div></div>
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__title\\">title</div>
    </a>
    <!--MODULE-COLLAPSE-->
  </div>
  <div class=\\"hig__global-nav__side-nav__section__group__module__submodules \\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__submodule\\" href=\\"https://a-website.com\\">
  A title
</a><!--SUBMODULE-->
  </div>
</div><!--MODULE-->
</div><!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<SubmoduleAdapter> renders with updated props 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <div class=\\"hig__global-nav__side-nav__section__group\\">
    <div class=\\"hig__global-nav__side-nav__section__group__module\\">
  <div class=\\"hig__global-nav__side-nav__section__group__module__row\\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__link\\" href=\\"#\\">
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__icon\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"assets\\"><title>assets-24</title><g fill=\\"#2e4258\\"><path d=\\"M7,18H3V3H13V6h1V3a1,1,0,0,0-1-1H3A1,1,0,0,0,2,3V18a1,1,0,0,0,1,1H7Z\\"></path><path d=\\"M21,8V21H9V8H21m0-1H9A1,1,0,0,0,8,8V21a1,1,0,0,0,1,1H21a1,1,0,0,0,1-1V8a1,1,0,0,0-1-1Z\\"></path><path d=\\"M19,16v3H11V16h8m1-1H10v5H20V15Z\\"></path><path d=\\"M10,9v5H20V9Zm9,4H16V12H14v1H11V10h8Z\\"></path><polygon points=\\"7 10 5 10 5 5 11 5 11 6 12 6 12 4 4 4 4 11 7 11 7 10\\"></polygon></g></svg></div></div>
      <div class=\\"hig__global-nav__side-nav__section__group__module__link__title\\">title</div>
    </a>
    <!--MODULE-COLLAPSE-->
  </div>
  <div class=\\"hig__global-nav__side-nav__section__group__module__submodules \\">
    <a class=\\"hig__global-nav__side-nav__section__group__module__submodule hig__global-nav__side-nav__section__group__module__submodule--active\\" href=\\"https://a-website.com\\">A title</a><!--SUBMODULE-->
  </div>
</div><!--MODULE-->
</div><!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;
